[package]
name = "piepeviewer"
version = "0.1.0"
edition = "2021"
description = "Educational version of the pv utility"
homepage = "https://github.com/Djudicael/pipeview_rust"
repository = "https://github.com/Djudicael/pipeview_rust"
readme = "README.md"
keywords = ["educational"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.2.22"
crossbeam = "0.8.2"
crossterm = "0.25.0"
